samples/_failures_safe/1761398701_094a65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37f3f724.c: In function ‘main’:
./samples/SAFE/__tmp_37f3f724.c:131:5: error: expected declaration or statement at end of input
  131 |     }
      |     ^
